# deep

./: Cargo.toml  LICENSE  README.md
.github/workflows/: cpu-tests.yaml
deep/: Cargo.toml
deep-backend-tools/: Cargo.toml
deep-backend-tools/src/: accumulate_tensors.rs  lib.rs  train_table.rs
deep-native/: Cargo.toml
deep-native/src/: lib.rs
deep-native/tests/: basic.rs
deep/src/: lib.rs  tensor.rs
