[package]
name = "deep-native"
version = "0.1.0"
authors = ["Geordon Worley <vadixidav@gmail.com>"]
edition = "2018"

[dependencies]
deep = { version = "0.1.0", path = "../deep" }
deep-backend-tools = { version = "0.1.0", path = "../deep-backend-tools" }
ndarray = "0.13.0"
rand_core = "0.5.1"

[dev-dependencies]
rand = "0.7.2"
